--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1D4221;
+    background-color: #6a7ed6;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
     display: flex;
@@ -10,8 +10,8 @@ body {
 }
 
 button {
-    background-color: #415727;
-    color: rgb(175, 196, 241);
+    background-color: #4243a5;
+    color: rgb(104, 163, 114);
     font-family: "Bai Jamjuree", sans-serif;
 }
 
